--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -20,3 +20,9 @@ jobs:
         run: |
           echo Add other actions to build,
           echo test, and deploy your project.
+  tests:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Testing the build
+        run: echo Testing Done..!!
+        
